// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it hides cautionary alerts 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it hides tenure information 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it hides the edit address button 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it shows cautionary alerts 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <aside
          class="mtfh-cautionary-alerts"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Cautionary alerts
          </h2>
          <p
            class="lbh-body-s"
          >
            None
          </p>
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it shows tenure information 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <aside
          class="mtfh-tenure-details"
          id="tenure-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            <a
              class="govuk-link lbh-link lbh-link--no-visited-state"
              href="/tenure/c01e3146-e630-c2cd-e709-18ef57bf3724"
            >
              Tenure
            </a>
          </h2>
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Inactive
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Start date
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                End date
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Payment ref.
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
          </dl>
        </aside>
        <a
          class="govuk-button lbh-button"
          href="/tenure/769894bd-b0bc-47eb-a780-322372c2448f/add"
        >
          New tenure
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`it shows the edit address button 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
      </div>
    </div>
  </div>
</div>
`;
